--- a/app/views/layouts/accounts.html.erb
+++ b/app/views/layouts/accounts.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>NextCoinOptions || Online  Account </title>
     <%= csrf_meta_tags %>
-    <meta name="description" content="Invest and reap rewards from  our investment mechanism created by the best proffessionals in the field"/>
+    <meta name="description" content="Your Online trading and management accounts built with the best & secure softwares. "/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -31,7 +31,7 @@
     <%= yield %>
 
       </div>
-  
+
     <script>
   (function(b,i,t,C,O,I,N) {
     window.addEventListener('load',function() {
