--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="js">
 <head>
-  <title>Nextcoinoptions</title>
+  <title>Next Coinoptions || Top online trade management system using powerful trading portfolios and best strategies</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <meta charset="utf-8">
