--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -7,7 +7,7 @@
           <%= image_tag "header-bg-a.jpg", class: "sp-image" %>
           <h1 class="sp-layer trd-slider-text-big" style="color:#fff;"
            data-position="left" data-vertical="-230"  data-horizontal="200"  data-show-transition="left" data-hide-transition="up" data-show-delay="1000" data-hide-delay="200">
-              Get 200% Returns <span class="trd-highlight-text"style="color:#fff;">On Investment</span> Only On  <br>This Platform
+              Get 60% Returns <span class="trd-highlight-text"style="color:#fff;">On Investment</span>   <br>Weekly
            </h1>
 
 
