--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -56,7 +56,9 @@
                   <li><%= link_to "FAQ", faqs_path %></li>
 
 
-                  <li><a href="work-process.html">How it Works</a></li>
+                  <li>
+                    <%= link_to "How It Works", page_path('how-it-works') %>
+                  </li>
 
                   <li>
                     <%= link_to "Coin Market", page_path('buy-sell') %>
