--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,7 +23,7 @@
       <div class="row row-vm">
         <div class="col-md-5 res-m-bttm">
       <div class="text-block">
-        <h2>About Next<span>CoinOptions</span></h2>
+        <h2>About Next CoinOptions</h2>
         <p>We are a body of highly trained trading experts. we have grown  high profile crypto-tech which we use to monitor and analyze the markets and make the best choice for your profit growth.</p>
         <ul>
           <li>you can exchange your bitcoin directly on this platform.</li>
