--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,102 +1,75 @@
 <!-- Section Footer -->
 <div class="footer-section section section-pad-md light bg-footer">
 
-<div class="container">
-<div class="row">
-  <div class="col-md-3 col-sm-6 wgs-box res-m-bttm-lg">
-    <!-- Each Widget -->
-    <div class="wgs-footer wgs-menu">
-      <h5 class="wgs-title ucap">Services</h5>
-      <div class="wgs-content">
-        <ul class="menu">
-          <li><a href="#">Buy Bitcoins</a></li>
-          <li><a href="#">Buy Ethereum</a></li>
-          <li><a href="#">Sell Bitcoins</a></li>
-          <li><a href="#">Bitcoin Trading</a></li>
-          <li><a href="#">Margin Trading</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- End Widget -->
-  </div>
-  <div class="col-md-3 col-sm-6 wgs-box res-m-bttm-lg">
-    <!-- Each Widget -->
-    <div class="wgs-footer wgs-menu">
-      <h5 class="wgs-title ucap">Information</h5>
-      <div class="wgs-content">
-        <ul class="menu">
-          <li><a href="#">Payment Options</a></li>
-          <li><a href="#">Fee Schedule</a></li>
-          <li><a href="#">Getting Started</a></li>
-          <li><a href="#">Identity Verification Guide</a></li>
-          <li><a href="#">Card Verification Guide</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- End Widget -->
-  </div>
-  <div class="col-md-3 col-sm-6 wgs-box res-m-bttm-lg">
-    <!-- Each Widget -->
-    <div class="wgs-footer wgs-post">
-      <h5 class="wgs-title ucap">Recent Blog</h5>
-      <div class="wgs-content">
-        <div class="wgs-post-single">
-          <div class="wgs-post-thumb">
-            <img src="images/post-thumb-sm-b.jpg" alt="post-thumb">
-          </div>
-          <div class="wgs-post-entry">
-            <h6 class="wgs-post-title"><a href="blog-single.html">Working Hard to Keep Pace with Demand </a></h6>
-            <span class="wgs-post-meta">December 19, 2017</span>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-6 wgs-box res-m-bttm-lg">
+        <!-- Each Widget -->
+        <div class="wgs-footer wgs-menu">
+          <h5 class="wgs-title ucap">Services</h5>
+          <div class="wgs-content">
+            <ul class="menu">
+              <li><%= link_to "Buy Bitcoins", orders_path %></li>
+              <li><%= link_to "Buy Ethereum", orders_path %></li>
+
+              <li><a href="#">Sell Bitcoins</a></li>
+              <li><a href="#">Bitcoin Trading</a></li>
+              <li><a href="#">Margin Trading</a></li>
+            </ul>
           </div>
         </div>
-        <div class="wgs-post-single">
-          <div class="wgs-post-thumb">
-            <img src="images/post-thumb-sm-c.jpg" alt="post-thumb">
-          </div>
-          <div class="wgs-post-entry">
-            <h6 class="wgs-post-title"><a href="blog-single.html">Working Hard to Keep Pace with Demand </a></h6>
-            <span class="wgs-post-meta">December 19, 2017</span>
+        <!-- End Widget -->
+      </div>
+      <div class="col-md-3 col-sm-6 wgs-box res-m-bttm-lg">
+        <!-- Each Widget -->
+        <div class="wgs-footer wgs-menu">
+          <h5 class="wgs-title ucap">Information</h5>
+          <div class="wgs-content">
+            <ul class="menu">
+              <li><%= link_to "Home", root_path %></li>
+              <li><%= link_to "FAQ's", faqs_path %></li>
+              <li><%= link_to "Get Started", new_user_registration_path %></li>
+              <li><%= link_to "CoinMarket", orders_path %></li>
+            </ul>
           </div>
         </div>
+        <!-- End Widget -->
+      </div>
+
+      <div class="col-md-3 col-sm-6 wgs-box res-m-bttm">
+        <!-- Each Widget -->
+        <div class="wgs-footer wgs-contact">
+          <h5 class="wgs-title ucap">get in touch</h5>
+          <div class="wgs-content">
+            <ul class="wgs-contact-list">
+              <li><span class="pe pe-7s-map-marker"></span>217 Summit Boulevard <br/>Birmingham, AL 35243</li>
+              <li><span class="pe pe-7s-global"></span>Email : <a href="mailto:support@nextcoinoptions.com">support@nextcoinoptions.com</a> <br/>Web : <a href="http://nextcoinoptions.com/">www.nextcoinoptions.com</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- End Widget -->
       </div>
     </div>
-    <!-- End Widget -->
   </div>
-  <div class="col-md-3 col-sm-6 wgs-box res-m-bttm">
-    <!-- Each Widget -->
-    <div class="wgs-footer wgs-contact">
-      <h5 class="wgs-title ucap">get in touch</h5>
-      <div class="wgs-content">
-        <ul class="wgs-contact-list">
-          <li><span class="pe pe-7s-map-marker"></span>217 Summit Boulevard <br/>Birmingham, AL 35243</li>
-          <li><span class="pe pe-7s-call"></span>Telephone : (123) 4567 8910 <br/>Telephone : (123) 1234 5678</li>
-          <li><span class="pe pe-7s-global"></span>Email : <a href="mailto:info@sitename.com">info@sitename.com</a> <br/>Web : <a href="http://example.com/">www.example.com</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- End Widget -->
-  </div>
-</div>
-</div>
 </div>
 <!-- End Section -->
 
 <!-- Copyright -->
 <div class="copyright light">
-<div class="container">
-<div class="row">
-  <div class="site-copy col-sm-7">
-    <p>Copyright &copy; 2018 Nextcoinoptions. Developed by <a href="https://zonia.co">Kizonia Solutions</a></p>
+  <div class="container">
+    <div class="row">
+      <div class="site-copy col-sm-7">
+        <p>Copyright &copy; 2018 Nextcoinoptions. Developed by <a href="https://zonia.co">Kizonia Solutions</a></p>
+      </div>
+      <div class="col-sm-5 text-right mobile-left">
+        <ul class="social">
+          <li><a href="#"><em class="fa fa-facebook"></em></a></li>
+          <li><a href="#"><em class="fa fa-twitter"></em></a></li>
+          <li><a href="#"><em class="fa fa-linkedin"></em></a></li>
+          <li><a href="#"><em class="fa fa-google-plus"></em></a></li>
+        </ul>
+      </div>
+    </div>
   </div>
-  <div class="col-sm-5 text-right mobile-left">
-    <ul class="social">
-      <li><a href="#"><em class="fa fa-facebook"></em></a></li>
-      <li><a href="#"><em class="fa fa-twitter"></em></a></li>
-      <li><a href="#"><em class="fa fa-linkedin"></em></a></li>
-      <li><a href="#"><em class="fa fa-google-plus"></em></a></li>
-    </ul>
-  </div>
-</div>
-</div>
 </div>
 <!-- End Copyright -->
