--- a/app/views/shared/_pricing.html.erb
+++ b/app/views/shared/_pricing.html.erb
@@ -14,8 +14,8 @@
       <div class="box-miner box-miner-alt">
         <div class="box-miner-price">
           <span class="price-unit">$</span>
-          5000
-          <span class="price-for">.00</span>
+          1000
+          <span class="price-for">.00+</span>
         </div>
         <h4 class="box-miner-title">Gold</h4>
         <ul class="box-miner-list">
@@ -53,8 +53,8 @@
       <div class="box-miner box-miner-alt">
         <div class="box-miner-price">
           <span class="price-unit">$</span>
-          10,000
-          <span class="price-for">.00</span>
+          25,000
+          <span class="price-for">.00+</span>
         </div>
         <h4 class="box-miner-title text-center">Silver</h4>
         <ul class="box-miner-list">
@@ -91,7 +91,7 @@
       <div class="box-miner box-miner-alt">
         <div class="box-miner-price">
           <span class="price-unit">$</span>
-          20,000
+          100,000
           <span class="price-for">.00+</span>
         </div>
         <h4 class="box-miner-title text-center">Platinum</h4>
