--- a/app/views/layouts/accounts.html.erb
+++ b/app/views/layouts/accounts.html.erb
@@ -9,6 +9,7 @@
 
     <%= stylesheet_link_tag    'accounts', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'accounts', 'data-turbolinks-track': 'reload' %>
+<script type='text/javascript' data-cfasync='false'>window.purechatApi = { l: [], t: [], on: function () { this.l.push(arguments); } }; (function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://app.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({c: 'ed42491b-e937-44a5-98b2-ef1dffb46a82', f: true }); done = true; } }; })();</script>
   </head>
 
   <body>
