--- a/app/views/withdraws/_form.html.erb
+++ b/app/views/withdraws/_form.html.erb
@@ -5,15 +5,9 @@
 
   <div class="form-inputs">
     <%= f.input :amount, placeholder: "$5000", class: "form-control border-input" %>
-    <%= f.input :payment_method, as: :select, :collection => [ "Bank Transfer"], class: "form-control border-input "  %>
+    <%= f.input :payment_method, as: :select, :collection => [ "Bank Transfer", "BTC"], class: "form-control border-input "  %>
     <%= f.input :email, class: "form-control border-input" %>
-    <%= f.input :bankName, label: "Bank Name", class: "form-control border-input" %>
-    <%= f.input :acctName, label: "Account Name", class: "form-control border-input" %>
-
-    <%= f.input :accountNumber, label: "Account Number", class: "form-control border-input" %>
-<p> For Bitcoin </p>
-    <%= f.input :bitcoin, label: "Input Bitcoin Wallet Address", class: "form-control border-input" %>
-
+=
   </div>
 
   <div class="form-actions">
