--- a/app/views/withdraws/index.html.erb
+++ b/app/views/withdraws/index.html.erb
@@ -73,8 +73,6 @@
       <th>Amount</th>
       <th>Payment Method</th>
       <th>Email</th>
-      <th>Bank Name </th>
-      <th>Account Number</th>
       <th>Status</th>
       </tr>
       </thead>
@@ -83,10 +81,9 @@
       <% @withdraws.each do |d| %>
       <tr>
       <td>$<%= d.amount %></td>
-      <td><%= d.payment_method %></td>
+      <td><%= d.payment_type %></td>
       <td><%= d.email %></td>
-      <td><%= d.bankName %></td>
-      <td><%= d.accountNumber %></td>
+  
       <td><% if d.status? %><a href="#" class="btn btn-success"> Paid</a> <%else %><a href="#" class="btn btn-danger">Not Confirmed</a> <% end %></td>
 
       </tr>
