--- a/app/views/deposits/show.html.erb
+++ b/app/views/deposits/show.html.erb
@@ -25,7 +25,7 @@
 
 
 
-
+  <%= @wallets.take(1).each do  |w| %>
 
 
     <div class="col-md-12 col-sm-6">
@@ -40,7 +40,7 @@
                     <div class="col-xs-7">
                         <div class="numbers">
                             <p> For Bitcoin Payments Please Use</p>
-                            <pre> 3QciL1uDm6njhH6NmjoEmvuyjYJvxpGNxn</pre>
+                            <pre> <%= w.btc_wallet %></pre>
                         </div>
                     </div>
                 </div>
@@ -48,6 +48,7 @@
             </div>
         </div>
     </div>
+    <% end %>
 
     <p class="text-center"><%= link_to "Return To Dasboard", root_path, class: "btn btn-primary" %> || <%= link_to "View Deposit History", deposits_path, class: "btn btn-primary" %></p>
       </div>
